kubernetes/applications/media/notifiarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifiarr
  namespace: media
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: notifiarr
  template:
    metadata:
      labels:
        app: notifiarr
      annotations:
        backup.velero.io/backup-volumes: config
    spec:
      hostname: notifiarr
      containers:
      - name: notifiarr
        image: golift/notifiarr:v0.9.5
        ports:
        - name: http
          containerPort: 5454
        livenessProbe:
          httpGet:
            path: /
            port: 5454
          initialDelaySeconds: 30
          periodSeconds: 30
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 5454
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 3
        volumeMounts:
        - name: config
          mountPath: /config
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 1Gi
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: notifiarr-config
---
apiVersion: v1
kind: Service
metadata:
  name: notifiarr
  namespace: media
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 5454
    targetPort: 5454
  selector:
    app: notifiarr
