kubernetes/applications/media/notifiarr/cloudflare-tunnel-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notifiarr-cloudflare
  namespace: media
  labels:
    app: notifiarr
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: notifiarr.kernow.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notifiarr
                port:
                  number: 5454
